# stencil

./: .gitignore  MANIFEST.in  Makefile  README.md  constraints.txt  pyproject.toml
src/stencil/: cli.py
src/stencil/impl/: build.py  serve.py
src/stencil/models/: builder.py  content.py  context.py
src/stencil/util/: config.py  exceptions.py  logging.py  metadata.py  schema.json
tests/: test_cli.py
tests/util/: test_config.py  test_metadata.py
